--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - test-mlflow-pytest
+      - test-github-action
   pull_request:
     branches:
       - main
