--- a/deployment/model_predictor/docker-compose.yml
+++ b/deployment/model_predictor/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     image: ${IMAGE_NAME}:${IMAGE_TAG}
     restart: on-failure
     volumes:
-      - ../../data/raw_data:/sample_solution/data/raw_data
-      - ../../data/train_data:/sample_solution/data/train_data
-      - ../../data/model_config:/sample_solution/data/model_config
-      - ../../data/captured_data:/sample_solution/data/captured_data
+      - ../../data/raw_data:/solution/data/raw_data
+      - ../../data/train_data:/solution/data/train_data
+      - ../../data/model_config:/solution/data/model_config
+      - ../../data/captured_data:/solution/data/captured_data
     ports:
       - ${PORT}:8000
     environment:
