--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -10,18 +10,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
+      with: 
+        python-version: '3.10'
+        architecture: 'x64'
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
       with:
-        python-version: '3.7'
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
-        python -m pip install -r dev-requirements.txt
-    - name: Test with pytest
+        pip install pylint
+        pip install black
+        pip install flake8
+        make install
+    - name: Analysing the code with pylint
       run: |
-        pytest --verbose
+        pylint $(git ls-files '*.py')
